# grupa_3

./: .gitignore  README.md
Intalnirea_14/: context_manager.py  generatoare.py  iteratoare.py
Intalnirea_15/: algoritmica.py  code_snippets.py  general_advice.py  linkuri_utile.py  oop.py  potential_internview_subjects.py
intalnire_10/: flask_example.py
intalnire_11/: decorators.py  setup.cfg
intalnire_11/marketplace_flask_sql_mongo/: app.py  app_mongo.py  app_sql.py
intalnire_11/marketplace_flask_sql_mongo/backend_service_layers/: api.py  exceptions.py  service.py  storage_interface.py  storage_layer.py
intalnire_11/marketplace_flask_sql_mongo/backend_services/: api.py  storage_interface.py  storage_layer.py
intalnire_11/marketplace_flask_sql_mongo/baza_de_date/: __init__.py  mongo_db.py  sql.py  users_db_model.py
intalnire_11/marketplace_flask_sql_mongo/baza_de_date/mongo_models/: users_mongo_db_model.py
intalnire_11/marketplace_flask_sql_mongo/baza_de_date/sql_models/: orders_sql_db_model.py  products_sql_db_model.py
intalnire_11/marketplace_flask_sql_mongo/comenzi/: functii.py
intalnire_11/marketplace_flask_sql_mongo/common/: utils.py
intalnire_11/marketplace_flask_sql_mongo/database/: mongo_db.py  sql.py
intalnire_11/marketplace_flask_sql_mongo/database/database_models/: mongo_models.py  sql_models.py
intalnire_11/marketplace_flask_sql_mongo/produse/: functii.py
intalnire_11/marketplace_flask_sql_mongo/utilizatori/: functii.py  utilizatori_mongodb.py
intalnire_11/tests/: conftest.py  test_app_mongo.py  test_utilizatori_functii.py
(+14 files in other folders)
