[metadata]
name = marketplace-example-package
version = 0.0.1
author = iT Factory
author_email = itfactory@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hypermad/grupa_3
project_urls =
    Bug Tracker = https://github.com/hypermad/grupa_3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = marketplace_flask_sql_mongo
packages = find:
python_requires = >=3.9
install_requires =
    flask
    pymongo
    sqlalchemy
tests_require =
    pytest
    pytest-mock
[options.packages.find]
where = marketplace_flask_sql_mongo